feat(character-list): ui to list characters, implement load more functionality

--- a/src/app/characters/feature/character-list/character-list.component.html
+++ b/src/app/characters/feature/character-list/character-list.component.html
@@ -1,1 +1,33 @@
-<p>character-list works!</p>
+<div class="container mt-3 mb-5">
+    <h1 class="_header text-center mt-3 mb-3">Star Wars Character</h1>
+
+    <div class="row mt-5 mb-2">
+        <div *ngIf="characters && characters.results.length > 0">
+            <div class="card" *ngFor="let character of characters.results" id="{{character.url}}">
+                <div class="card-body">
+                    <h5 class="card-title">{{character.name}}</h5>
+                </div>
+            </div>
+            <div class="text-center mt-4">
+                <button type="button" *ngIf="!loadMoreBtn" class="btn btn-warning" (click)="loadMore()">Load More</button>
+
+                <button *ngIf="loadMoreBtn" class="btn btn-warning" type="button" disabled>
+                    <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                    Loading...
+                </button>
+            </div>
+        </div>
+        <div *ngIf="characters && characters.results.length === 0">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">No results</h5>
+                </div>
+            </div>
+        </div>
+        <div class="spinner-wrapper" *ngIf="!characters">
+            <div class="spinner-grow text-warning" style="width: 3rem; height: 3rem;" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+    </div>
+</div>
