feat(character-details):  - create character details component and setup routing  - naviage to character page with correct id  - state management for handling character data  - test cases

--- a/src/app/characters/feature/character-list/character-list.component.html
+++ b/src/app/characters/feature/character-list/character-list.component.html
@@ -3,7 +3,7 @@
 
     <div class="row mt-5 mb-2">
         <div *ngIf="characters && characters.results.length > 0">
-            <div class="card" *ngFor="let character of characters.results" id="{{character.url}}">
+            <div class="card" *ngFor="let character of characters.results" (click)="onCharacterSelect(character)" id="{{character.url}}">
                 <div class="card-body">
                     <h5 class="card-title">{{character.name}}</h5>
                 </div>
