feat(character-details): implement state management for handling movie collection and ui to displace character movie collection

--- a/src/app/characters/feature/character-details/character-details.component.scss
+++ b/src/app/characters/feature/character-details/character-details.component.scss
@@ -15,3 +15,11 @@
     text-align: center;
     margin-top: 8em;
 }
+
+.card-bottom {
+    margin-bottom: 0.5em
+}
+
+.section-wrapper {
+    margin-bottom: 2.1em;
+}
