--- a/src/app/characters/feature/character-details/character-details.component.html
+++ b/src/app/characters/feature/character-details/character-details.component.html
@@ -25,6 +25,19 @@
                 </div>
             </div>
 
+            <div class="section-wrapper text-center" *ngIf="(movies$ | async)?.length > 0">
+                <h3 class="header-bottom">Movies</h3>
+                <div class="row justify-content-center">
+                    <div class="col-md-4 col-sm-6" *ngFor="let movie of movies$ | async">
+                        <div class="card card-bottom card-top-boarder">
+                            <div class="card-body">
+                                <h6 class="card-title">{{movie.title}}</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
         <ng-template #loading_section>
             <div class="spinner-wrapper">
