--- a/src/app/characters/feature/character-list/character-list.component.scss
+++ b/src/app/characters/feature/character-list/character-list.component.scss
@@ -21,3 +21,14 @@ div > span {
     text-align: center;
     margin-top: 8em;
 }
+
+.btn-section {
+    position: relative;
+    top: 30px;
+    text-align: center;
+}
+
+.filter-container {
+    padding: 20px;
+    border-radius: 5px;
+}
